--- a/apps/base/dremio/dremio.yaml
+++ b/apps/base/dremio/dremio.yaml
@@ -32,7 +32,7 @@ spec:
       interval: 1m
   values:
     image: dremio/dremio-oss
-    imageTag: 25.2
+    imageTag: "25.2"
     executor:
       count: 3
       cpu: 4
