--- a/apps/base/ballista/ballista.yaml
+++ b/apps/base/ballista/ballista.yaml
@@ -1,4 +1,11 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: ballista
+  labels:
+    toolkit.fluxcd.io/tenant: kog-team
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: ballista-scheduler
