--- a/apps/base/ballista/ballista.yaml
+++ b/apps/base/ballista/ballista.yaml
@@ -9,6 +9,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ballista-scheduler
+  namespace: ballista
   labels:
     app: ballista-scheduler
 spec:
@@ -24,6 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ballista-scheduler
+  namespace: ballista
 spec:
   replicas: 1
   selector:
