--- a/apps/base/ballista/pvc.yaml
+++ b/apps/base/ballista/pvc.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: data-pv
+  namespace: ballista
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: longhorn
   capacity:
     storage: 10Gi
   accessModes:
@@ -17,8 +18,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-pv-claim
+  namespace: ballista
 spec:
-  storageClassName: manual
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
