--- a/apps/base/ballista/ballista.yaml
+++ b/apps/base/ballista/ballista.yaml
@@ -56,6 +56,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ballista-executor
+  namespace: ballista
 spec:
   replicas: 3
   selector:
