--- a/infrastructure/configs/cluster-issuers.yaml
+++ b/infrastructure/configs/cluster-issuers.yaml
@@ -19,3 +19,18 @@ spec:
         selector:
           dnsZones:
             - "reinthal.cc"
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-http
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: info@reinthal.me
+    privateKeySecretRef:
+      name: letsencrypt-http
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: traefik
