--- a/infrastructure/configs/cluster-issuers.yaml
+++ b/infrastructure/configs/cluster-issuers.yaml
@@ -23,14 +23,20 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-http
+  name: letsencrypt-datadrivet-dev
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: info@reinthal.me
+    email: alexander.reinthal@knowit.se
     privateKeySecretRef:
-      name: letsencrypt-http
+      name: letsencrypt
     solvers:
-      - http01:
-          ingress:
-            ingressClassName: traefik
+      - dns01:
+          cloudflare:
+            email: alexander.reinthal@knowit.se
+            apiTokenSecretRef:
+              name: cloudflare-token-secret-datadrivet-dev
+              key: token
+        selector:
+          dnsZones:
+            - "datadrivet.dev"
