--- a/infrastructure/certificates/platform-datadrivet-dev.yaml
+++ b/infrastructure/certificates/platform-datadrivet-dev.yaml
@@ -11,7 +11,7 @@ spec:
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
   secretName: platform-datadrivet-dev-tls
   issuerRef:
-    name: letsencrypt
+    name: letsencrypt-datadrivet-dev
     kind: ClusterIssuer
   commonName: "*.platform.datadrivet.dev"
   dnsNames:
