--- a/infrastructure/supporting-infra/minio.yaml
+++ b/infrastructure/supporting-infra/minio.yaml
@@ -51,7 +51,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: minio-operator-ingress
-  namespace: flux-system
+  namespace: minio
 spec:
   entryPoints:
     - websecure
