fix: old reference of pyspark

--- a/apps/base/kubeflow/kustomization.yaml
+++ b/apps/base/kubeflow/kustomization.yaml
@@ -4,6 +4,6 @@ namespace: kubeflow
 resources:
   - spark.yaml
   - meta.yaml
-  - pyspark.yaml
+  - jupyterhub.yaml
   # frontend
   #- ingress.yaml
