fix: add pyspark notebook image

--- a/apps/base/kubeflow/jupyterhub.yaml
+++ b/apps/base/kubeflow/jupyterhub.yaml
@@ -27,4 +27,7 @@ spec:
   values:
     singleuser:
       serviceAccountName: spark-operator-spark
+    prePuller:
+      extraImages: jupyter/all-spark-notebook
+      tag: latest
 
