--- a/apps/base/kubeflow/jupyterhub.yaml
+++ b/apps/base/kubeflow/jupyterhub.yaml
@@ -27,7 +27,19 @@ spec:
   values:
     singleuser:
       serviceAccountName: spark-operator-spark
+      image:
+        name: jupyter/datascience-notebook
+        tag: 98c2b44b4e44
+      profileList:
+        - display_name: "Datascience environment"
+          description: "An environment with lots of stuff python R Julia."
+          default: true
+        - display_name: "Pyspark Environment"
+          description: "Data Eningeering environment."
+          kubespawner_override:
+            image: jupyter/pyspark:spark-3.1.1
     prePuller:
-      extraImages: jupyter/all-spark-notebook
-      tag: latest
+      spark-notebook:
+        extraImages: jupyter/pyspark-notebook
+        tag: spark-3.1.1
 
