--- a/apps/base/kubeflow/spark.yaml
+++ b/apps/base/kubeflow/spark.yaml
@@ -70,43 +70,37 @@ roleRef:
   name: spark-operator-role
   apiGroup: rbac.authorization.k8s.io
 ---
-apiVersion: "sparkoperator.k8s.io/v1beta2"
+apiVersion: sparkoperator.k8s.io/v1beta2
 kind: SparkApplication
 metadata:
-  name: spark-pi
-  namespace: kubeflow
+  name: spark-pi-dynamic-allocation
+  namespace: default
 spec:
   type: Scala
   mode: cluster
-  image: "gcr.io/spark-operator/spark:v3.1.1"
-  imagePullPolicy: Always
+  image: spark:3.5.2
+  imagePullPolicy: IfNotPresent
   mainClass: org.apache.spark.examples.SparkPi
-  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.1.1.jar"
-  sparkVersion: "3.1.1"
-  restartPolicy:
-    type: Never
-  volumes:
-    - name: "test-volume"
-      hostPath:
-        path: "/tmp"
-        type: Directory
+  mainApplicationFile: local:///opt/spark/examples/jars/spark-examples_2.12-3.5.2.jar
+  sparkVersion: 3.5.2
+  arguments:
+  - "50000"
   driver:
-    cores: 1
-    coreLimit: "1200m"
-    memory: "512m"
     labels:
-      version: 3.1.1
-    # Ensure the service account matches what is set up by the spark-operator HelmRelease
+      version: 3.5.2
+    cores: 1
+    coreLimit: 1200m
+    memory: 512m
     serviceAccount: spark-operator-spark
-    volumeMounts:
-      - name: "test-volume"
-        mountPath: "/tmp"
   executor:
-    cores: 1
-    instances: 1
-    memory: "512m"
     labels:
-      version: 3.1.1
-    volumeMounts:
-      - name: "test-volume"
-        mountPath: "/tmp"
+      version: 3.5.2
+    instances: 1
+    cores: 1
+    coreLimit: 1200m
+    memory: 512m
+  dynamicAllocation:
+    enabled: true
+    initialExecutors: 2
+    maxExecutors: 5
+    minExecutors: 1
