fix: remove spark

--- a/apps/base/kubeflow/kustomization.yaml
+++ b/apps/base/kubeflow/kustomization.yaml
@@ -4,6 +4,4 @@ namespace: kubeflow
 resources:
   - spark.yaml
   - meta.yaml
-  - jupyterhub.yaml
-  # frontend
-  #- ingress.yaml
+  #- jupyterhub.yaml
