--- a/apps/base/traefik/ingress.yaml
+++ b/apps/base/traefik/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`traefik.local.reinthal.cc`)
+    - match: Host(`traefik.local.reinthal.me`)
       kind: Rule
       middlewares:
         - name: traefik-dashboard-basicauth
