--- a/apps/base/dagster/codeserver-configuration.yaml
+++ b/apps/base/dagster/codeserver-configuration.yaml
@@ -9,9 +9,9 @@ data:
   NESSIE_BRANCH: main
   NESSIE_WAREHOUSE: s3://iceberg/warehouse
   ELASTIC_PASSWORDS_INDEX: passwords-prod
-  ELASTIC_URL: https://elastic.local.reinthal.cc
-  NESSIE_URI: https://nessie.local.reinthal.cc/iceberg
+  ELASTIC_URL: https://elastic.local.reinthal.me
+  NESSIE_URI: https://nessie.local.reinthal.me/iceberg
   SOURCES__FILESYSTEM__CREDENTIALS__AWS_S3_ENDPOINT: https://minio.nas.reinthal.me
   DESTINATION__FILESYSTEM__CREDENTIALS__AWS_S3_ENDPOINT: http://nas.reinthal.me:9000
-  DAGSTER_HOST: dagster.local.reinthal.cc
+  DAGSTER_HOST: dagster.local.reinthal.me
   TARGET: prod
