--- a/apps/base/nessie/ingress.yaml
+++ b/apps/base/nessie/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`nessie.local.reinthal.cc`)
+    - match: Host(`nessie.local.reinthal.me`)
       kind: Rule
       services:
         - name: nessie
