--- a/helm-values/trino-values.yaml
+++ b/helm-values/trino-values.yaml
@@ -306,7 +306,7 @@ catalogs:
     fs.native-s3.enabled=true
     iceberg.catalog.type=rest
     iceberg.rest-catalog.security=NONE
-    iceberg.rest-catalog.uri=https\://nessie.local.reinthal.cc/iceberg/
+    iceberg.rest-catalog.uri=https\://nessie.local.reinthal.me/iceberg/
     iceberg.rest-catalog.vended-credentials-enabled=false
     s3.endpoint=http\://nas.reinthal.me\:9000
     s3.path-style-access=true
