fix(domain): fix the certificate domain

--- a/apps/base/cyberchef/ingress.yaml
+++ b/apps/base/cyberchef/ingress.yaml
@@ -16,5 +16,5 @@ spec:
         - name: cyberchef-service
           port: 8080
   tls:
-    secretName: local-reinthal-cc-tls
+    secretName: local-reinthal-me-tls
 ---
