--- a/apps/base/elastic/kibana-ingress.yaml
+++ b/apps/base/elastic/kibana-ingress.yaml
@@ -19,4 +19,4 @@ spec:
         - name: kibana-kb-http
           port: 5601
   tls:
-    secretName: local-reinthal-cc-tls
+    secretName: local-reinthal-me-tls
