--- a/apps/base/ray/ingress.yaml
+++ b/apps/base/ray/ingress.yaml
@@ -15,7 +15,7 @@ spec:
         - name: kuberay-operator
           port: 8080
   tls:
-    secretName: local-reinthal-cc-tls
+    secretName: local-reinthal-me-tls
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
@@ -55,4 +55,4 @@ spec:
         - name: raycluster-kuberay-head-svc # This will be created by the Ray cluster
           port: 8265
   tls:
-    secretName: local-reinthal-cc-tls
+    secretName: local-reinthal-me-tls
