--- a/infrastructure/configs/cluster-issuers.yaml
+++ b/infrastructure/configs/cluster-issuers.yaml
@@ -5,7 +5,7 @@ metadata:
   name: letsencrypt
 spec:
   acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     email: info@reinthal.me
     privateKeySecretRef:
       name: letsencrypt
@@ -16,6 +16,7 @@ spec:
             apiTokenSecretRef:
               name: cloudflare-token-secret
               key: token
+            zoneID: d4c11a564a0082f24ed0b0afb66bcb37
         selector:
           dnsZones:
             - "reinthal.me"
