--- a/infrastructure/certificates/kustomization.yaml
+++ b/infrastructure/certificates/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - local-reinthal-me.yaml
+resources: []
+#  - local-reinthal-me.yaml
