--- a/infrastructure/configs/kustomization.yaml
+++ b/infrastructure/configs/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  #- cluster-issuers.yaml
+  - cluster-issuers.yaml
   - allow-ingress-sealed-secrets.yaml
   - cloudflare-token-secret-sealed.yaml
   - ghcr-secret-sealed.yaml
