feat: add an ip for the trino service

--- a/apps/base/trino/trino.yaml
+++ b/apps/base/trino/trino.yaml
@@ -44,6 +44,9 @@ spec:
     worker:
       jvm:
         maxHeapSize: "4G"
+    service:
+      type: LoadBalancer
+      port: 8080
     catalogs:
       prod: |-
         connector.name=iceberg
