--- a/apps/base/dagster/oauth2-proxy-dagster-helmrelease.yaml
+++ b/apps/base/dagster/oauth2-proxy-dagster-helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   name: oauth2-proxy
   namespace: dagster
 spec:
-  interval: 1m0s
+  interval: 72h
   url: https://oauth2-proxy.github.io/manifests
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
@@ -25,7 +25,7 @@ spec:
       version: 7.8.0
   install:
     createNamespace: false
-  interval: 1m0s
+  interval: 72h
   releaseName: oauth2-dagster-webui-proxy
   targetNamespace: dagster
   values:
