feat: beef it up again

--- a/apps/base/trino/trino.yaml
+++ b/apps/base/trino/trino.yaml
@@ -40,10 +40,10 @@ spec:
       workers: 6
     coordinator:
       jvm:
-        maxHeapSize: "4G"
+        maxHeapSize: "8G"
     worker:
       jvm:
-        maxHeapSize: "4G"
+        maxHeapSize: "8G"
     service:
       type: LoadBalancer
       port: 8080
@@ -61,6 +61,6 @@ spec:
     additionalConfigProperties:
       - http-server.process-forwarded=true
       - http-server.process-forwarded=true
-      - query.max-memory=24GB          # Total memory limit across all nodes
-      - query.max-memory-per-node=3GB # Per-node memory limit (less than JVM heap)
+      - query.max-memory=48G  # Total memory limit across all nodes
+      - query.max-memory-per-node=7GB # Per-node memory limit (less than JVM heap)
       - memory.heap-headroom-per-node=512MB # Headroom to prevent OOM errors
